--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
-spring.main.allow-circular-references=true
+#spring.main.allow-circular-references=true
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
