--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,23 @@
 spring.application.name=OrderCart-spring
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=
+#MySQL
+# spring.datasource.url=jdbc:mysql://localhost:3306/test
+# spring.datasource.username=root
+# spring.datasource.password=
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5434/ordercart
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.devtools.livereload.enabled=true
 
 #Only if you use MySql 8.0.0 and +
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 #spring.main.allow-circular-references=true
 
